# multi-tenant

./: .gitignore  Dockerfile  Makefile  PROJECT_MAP.md  README_ARCH.md  README_PLUGABLE.md  SAAS_FEATURES.md  db.sqlite3  docker-compose.yml  mkdocs.yml  pyproject.toml  schema.yml  sovereign_postman_collection.json
core/: settings.py  test_settings.py  urls.py
docs/: api.md  architecture.md  index.md  integration.md
products/: admin.py  api_views.py  apps.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_id.py  0003_product_image.py
scripts/: check_cycles.py  verify_absolute_parity.py  verify_high_maturity.py
templates/: base.html  index.html  onboard.html
templates/auth/: login.html
templates/dashboard/: accept_invitation.html  audit_logs.html  domains.html  home.html  invitation_error.html  invites.html  search_full.html
templates/partials/: navbar.html
templates/products/: create.html  list.html
tenants/: admin.py  admin_mixins.py  api_base.py  api_views.py  apps.py  checks.py  conf.py  logging.py  middleware.py  middleware_user.py  models.py  serializers.py  services.py  services_bulk.py  services_domain.py  services_invitation.py  services_metrics.py  services_portability.py  services_quota.py  services_search.py  services_sso.py  services_webhook.py  signals.py  storage_utils.py  tasks.py  throttling.py  urls.py  utils.py  utils_storage.py  views.py  views_dashboard.py
tenants/admin/: admin.py  admin_mixins.py
tenants/api/: decorators.py  exceptions_handler.py  mixins.py  throttling.py
tenants/business/: dto.py  exceptions.py
tenants/infrastructure/: cache.py  checks.py  conf.py  hub.py  logging.py  protocols.py  protocols_audit.py  protocols_control.py  protocols_database.py  protocols_identity.py  protocols_intelligence.py  registry.py  storage_backends.py  storage_utils.py  utils.py
tenants/management/: GHOST_MIGRATIONS.md
tenants/middleware/: middleware.py  middleware_impersonation.py  middleware_resilience.py  middleware_user.py
tenants/migrations/: 0001_initial.py  (+13 more)
users/: models.py  services.py  urls.py  views.py
(+199 files in other folders)
