[project]
name = "multi-tenant"
version = "0.1.0"
description = ""
authors = [
    {name = "Mohanraj",email = "mohanraj.mm1311@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0.2)",
    "django-extensions (>=3.2.3)",
    "django-htmx (>=1.17.0)",
    "django-environ (>=0.11.2)",
    "pillow (>=12.1.1,<13.0.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "dnspython (>=2.8.0,<3.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)",
    "boto3 (>=1.42.47,<2.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "openai (>=2.20.0,<3.0.0)",
    "anthropic (>=0.79.0,<0.80.0)",
    "stripe (>=14.3.0,<15.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "opentelemetry-api (>=1.39.1,<2.0.0)",
    "opentelemetry-sdk (>=1.39.1,<2.0.0)",
    "opentelemetry-instrumentation-django (>=0.60b1,<0.61)",
    "opentelemetry-exporter-otlp (>=1.39.1,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.1.1,<8.0.0)",
    "elasticsearch-dsl (>=8.18.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
hypothesis = "^6.151.6"
pytest = "^9.0.2"
pytest-django = "^4.11.1"

